--- a/RRProj1.Rmd
+++ b/RRProj1.Rmd
@@ -2,7 +2,9 @@
 title: "Reproducible Research Project 1"
 author: "Alex Lee"
 date: "9/17/2019"
-output: html_document
+output: 
+  html_document:
+    keep_md: TRUE
 ---
 
 ```{r global_options, echo=TRUE}
@@ -102,7 +104,7 @@ sumdata <- aggregate(steps~date, newdata, sum)
 
 We will now generate a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day.
 
-```{r }
+```{r histogram, fig.height=4}
 hist(sumdata$steps, col = "green" ,xlab = "Steps" ,main = "Total Number of Steps Per Day (with the missing data filled in)")
 ```
 
